--- a/main.html
+++ b/main.html
@@ -12,32 +12,27 @@
     <div class="screen">
         <div class="view"></div>
     </div>
-    <table class="table">
-        <tr>
-            <td> <input class="button" type="button" value="1" onclick="insert(1)"></td>
-            <td><input  class="button" type="button" value="2" onclick="insert(2)"></td>
-            <td><input  class="button" type="button" value="3" onclick="insert(3)"></td>
-            <td><input  class="button" type="button" value="+" onclick="insert('+')"></td>
-        </tr>
-        <tr>
-            <td><input class="button" type="button" value="4" onclick="insert(4)"></td>
-            <td><input class="button" type="button" value="5" onclick="insert(5)"></td>
-            <td><input class="button" type="button" value="6" onclick="insert(6)"></td>
-            <td><input class="button" type="button" value="-" onclick="insert('-')"></td>
-        </tr>
-        <tr>
-            <td><input class="button" type="button" value="7" onclick="insert(7)"></td>
-            <td><input class="button" type="button" value="8" onclick="insert(8)"></td>
-            <td><input class="button" type="button" value="9" onclick="insert(9)"></td>
-            <td><input class="button" type="button" value="*" onclick="insert('*')"></td>
-        </tr>
-        <tr>
-            <td><input class="button" type="button" value="0" onclick="insert(0)"></td>
-            <td><input class="button" id="clear" type="button" value="c" ></td>
-            <td><input class="button" id="equal"  type="button" value="="></td>
-            <td><input class="button" type="button" value="/" onclick="insert('/')"></td>
-        </tr>
-    </table>
+    <div class="buttons">
+        <div id="zero">0</div>
+        <div id="one">1</div>
+        <div id="two">2</div>
+        <div id="three">3</div>
+        <div id="four">4</div>
+        <div id="five">5</div>
+        <div id="six">6</div>
+        <div id="seven">7</div>
+        <div id="eigth">8</div>
+        <div id="nine">9</div>
+        <div id="add">+</div>
+        <div id="subs">-</div>
+        <div id="multiply">*</div>
+        <div id="divide">/</div>
+        <div id="equal">=</div>
+        <div id="float">.</div>
+        <div id="percent">%</div>
+        <div id="delete">del</div>
+        <div id="clear">C</div>
+    </div>
 </div>
     <script src="./main.js"></script>
 </body>
