--- a/main.html
+++ b/main.html
@@ -13,27 +13,28 @@
         <div class="view"></div>
     </div>
     <div class="buttons">
-        <div id="zero">0</div>
-        <div id="one">1</div>
-        <div id="two">2</div>
-        <div id="three">3</div>
-        <div id="four">4</div>
-        <div id="five">5</div>
-        <div id="six">6</div>
-        <div id="seven">7</div>
-        <div id="eigth">8</div>
-        <div id="nine">9</div>
-        <div id="add">+</div>
-        <div id="subs">-</div>
-        <div id="multiply">*</div>
-        <div id="divide">/</div>
-        <div id="equal">=</div>
-        <div id="float">.</div>
-        <div id="percent">%</div>
-        <div id="delete">del</div>
-        <div id="clear">C</div>
-    </div>
+    <button type="submit" id="zero"value="0">0</button>
+    <button type="submit" id="one"value="1">1</button>
+    <button type="submit" id="two"value="2">2</button>
+    <button type="submit" id="three"value="3">3</button>
+    <button type="submit" id="four"value="4">4</button>
+    <button type="submit" id="five"value="5">5</button>
+    <button type="submit" id="six"value="6">6</button>
+    <button type="submit" id="seven"value="7">7</button>
+    <button type="submit" id="eigth"value="8">8</button>
+    <button type="submit" id="nine"value="9">9</button>
+    <button type="submit" id="equal"value=""class="equal">=</button> 
+    <button type="submit" id="add"value="+">+</button>
+    <button type="submit" id="subs"value="-">-</button>
+    <button type="submit" id="multiply"value="*">*</button>
+    <button type="submit" id="divide"value="/">/</button>
+    <button type="submit"id="clear"class="clear">C</button>
 </div>
-    <script src="./main.js"></script>
+</div>
+<script src="./main.js"></script>
 </body>
 </html>
+    
+   
+ 
+        
